--- a/app/src/main/res/layout/activity_cadastro_de_produto.xml
+++ b/app/src/main/res/layout/activity_cadastro_de_produto.xml
@@ -4,28 +4,20 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="#80000000"
     tools:context=".activities.CadastroDeProdutoActivity">
 
 
     <TextView
         android:id="@+id/tv_cadastro_produto_nome"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="8dp"
-        android:layout_marginTop="1dp"
-        android:layout_marginBottom="1dp"
+        style="@style/AppTextV"
         android:text="Nome:"
-        android:textSize="18sp"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
     <EditText
         android:id="@+id/et_cadastro_produto_nome"
-        android:layout_width="0dp"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="8dp"
-        android:layout_marginTop="1dp"
-        android:ems="10"
+        style="@style/AppEtxt"
         android:hint="nome"
         android:inputType="textPersonName"
         app:layout_constraintEnd_toEndOf="parent"
@@ -35,10 +27,7 @@
 
     <TextView
         android:id="@+id/tv_cadastro_produto_volume"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="8dp"
-        android:layout_marginTop="8dp"
+        style="@style/AppTextV"
         android:text="Volume:"
         android:textSize="18sp"
         app:layout_constraintStart_toStartOf="parent"
@@ -46,11 +35,7 @@
 
     <EditText
         android:id="@+id/et_cadastro_produto_volume"
-        android:layout_width="0dp"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="8dp"
-        android:layout_marginTop="1dp"
-        android:ems="10"
+        style="@style/AppEtxt"
         android:hint="volume"
         android:inputType="textPersonName"
         app:layout_constraintEnd_toEndOf="parent"
@@ -59,22 +44,14 @@
 
     <TextView
         android:id="@+id/tv_cadastro_produto_quantidade"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="8dp"
-        android:layout_marginTop="8dp"
+        style="@style/AppTextV"
         android:text="Quantidade:"
-        android:textSize="18sp"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/et_cadastro_produto_volume" />
 
     <EditText
         android:id="@+id/et_cadastro_produto_quantidade"
-        android:layout_width="0dp"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="8dp"
-        android:layout_marginTop="1dp"
-        android:ems="10"
+        style="@style/AppEtxt"
         android:hint="quantidade"
         android:inputType="textPersonName"
         app:layout_constraintEnd_toEndOf="parent"
@@ -83,22 +60,14 @@
 
     <TextView
         android:id="@+id/tv_cadastro_produto_preco"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="8dp"
-        android:layout_marginTop="8dp"
+        style="@style/AppTextV"
         android:text="Preço:"
-        android:textSize="18sp"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/et_cadastro_produto_quantidade" />
 
     <EditText
         android:id="@+id/et_cadastro_produto_preco"
-        android:layout_width="0dp"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="8dp"
-        android:layout_marginTop="1dp"
-        android:ems="10"
+        style="@style/AppEtxt"
         android:hint="preço"
         android:inputType="textPersonName"
         app:layout_constraintEnd_toEndOf="parent"
@@ -107,12 +76,8 @@
 
     <TextView
         android:id="@+id/tv_produto_categoria"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="8dp"
-        android:layout_marginTop="8dp"
+        style="@style/AppTextV"
         android:text="Categoria:"
-        android:textSize="18sp"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/et_cadastro_produto_preco" />
 
@@ -138,6 +103,7 @@
         android:layout_marginStart="8dp"
         android:layout_marginTop="20dp"
         android:layout_marginEnd="8dp"
+        android:background="@drawable/selector_bt"
         android:onClick="cadastrarProduto"
         android:text="Salvar"
         app:layout_constraintEnd_toEndOf="parent"
