--- a/app/src/main/res/layout/activity_exibir_produto.xml
+++ b/app/src/main/res/layout/activity_exibir_produto.xml
@@ -4,6 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="#80000000"
     tools:context=".activities.ExibirProdutosActivity">
 
     <TextView
@@ -13,10 +14,10 @@
         android:layout_marginStart="8dp"
         android:layout_marginTop="32dp"
         android:background="#51B9B0B0"
-        android:fontFamily="monospace"
+        android:fontFamily="sans-serif-black"
+        android:textColor="#000000"
+        android:textSize="18sp"
         android:text="Nome"
-        android:textStyle="bold"
-        android:visibility="visible"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
@@ -26,8 +27,9 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="16dp"
         android:background="#51B9B0B0"
-        android:fontFamily="monospace"
-        android:textStyle="bold"
+        android:fontFamily="sans-serif-black"
+        android:textColor="#000000"
+        android:textSize="18sp"
         android:text="Quantidade"
         app:layout_constraintEnd_toEndOf="@+id/tv_dados_prod_nome"
         app:layout_constraintStart_toStartOf="@+id/tv_dados_prod_nome"
@@ -39,8 +41,9 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="16dp"
         android:background="#51B9B0B0"
-        android:fontFamily="monospace"
-        android:textStyle="bold"
+        android:fontFamily="sans-serif-black"
+        android:textColor="#000000"
+        android:textSize="18sp"
         android:text="Volume"
         app:layout_constraintEnd_toEndOf="@+id/tv_dados_prod_qtd"
         app:layout_constraintStart_toStartOf="@+id/tv_dados_prod_qtd"
@@ -52,8 +55,9 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="16dp"
         android:background="#51B9B0B0"
-        android:fontFamily="monospace"
-        android:textStyle="bold"
+        android:fontFamily="sans-serif-black"
+        android:textColor="#000000"
+        android:textSize="18sp"
         android:text="Preço/m³"
         app:layout_constraintEnd_toEndOf="@+id/tv_dados_prod_vol"
         app:layout_constraintStart_toStartOf="@+id/tv_dados_prod_vol"
@@ -65,8 +69,9 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="16dp"
         android:background="#51B9B0B0"
-        android:fontFamily="monospace"
-        android:textStyle="bold"
+        android:fontFamily="sans-serif-black"
+        android:textColor="#000000"
+        android:textSize="18sp"
         android:text="Categoria"
         app:layout_constraintEnd_toEndOf="@+id/tv_dados_prod_preco"
         app:layout_constraintStart_toStartOf="@+id/tv_dados_prod_preco"
@@ -79,9 +84,9 @@
         android:layout_marginStart="16dp"
         android:layout_marginEnd="8dp"
         android:textAlignment="center"
-        android:textSize="12sp"
         android:background="#51B9B0B0"
-        android:fontFamily="monospace"
+        android:fontFamily="sans-serif"
+        android:textSize="18sp"
         app:layout_constraintBottom_toBottomOf="@+id/tv_dados_prod_nome"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toEndOf="@+id/tv_dados_prod_nome"
@@ -94,9 +99,9 @@
         android:layout_marginStart="16dp"
         android:layout_marginEnd="8dp"
         android:textAlignment="center"
-        android:textSize="12sp"
         android:background="#51B9B0B0"
-        android:fontFamily="monospace"
+        android:fontFamily="sans-serif-black"
+        android:textSize="18sp"
         app:layout_constraintBottom_toBottomOf="@+id/tv_dados_prod_qtd"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toEndOf="@+id/tv_dados_prod_qtd"
@@ -109,9 +114,9 @@
         android:layout_marginStart="16dp"
         android:layout_marginEnd="8dp"
         android:textAlignment="center"
-        android:textSize="14sp"
         android:background="#51B9B0B0"
-        android:fontFamily="monospace"
+        android:fontFamily="sans-serif-black"
+        android:textSize="18sp"
         app:layout_constraintBottom_toBottomOf="@+id/tv_dados_prod_vol"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toEndOf="@+id/tv_dados_prod_vol"
@@ -124,9 +129,9 @@
         android:layout_marginStart="16dp"
         android:layout_marginEnd="8dp"
         android:textAlignment="center"
-        android:textSize="12sp"
         android:background="#51B9B0B0"
-        android:fontFamily="monospace"
+        android:fontFamily="sans-serif"
+        android:textSize="18sp"
         app:layout_constraintBottom_toBottomOf="@+id/tv_dados_prod_preco"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toEndOf="@+id/tv_dados_prod_preco"
