--- a/app/src/main/res/layout/activity_lista_produtos.xml
+++ b/app/src/main/res/layout/activity_lista_produtos.xml
@@ -4,6 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
+    android:background="#80000000"
     tools:context=".activities.ProdutosActivity">
 
     <TextView
@@ -12,12 +13,12 @@
         android:layout_height="40dp"
         android:layout_marginTop="16dp"
         android:ems="7"
-        android:fontFamily="monospace"
+        android:fontFamily="sans-serif-black"
+        android:textColor="#000000"
+        android:textSize="18sp"
         android:inputType="textPersonName"
         android:text="Nome"
         android:textAlignment="center"
-        android:textSize="18sp"
-        android:textStyle="bold"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
@@ -28,8 +29,9 @@
         android:ems="3"
         android:text="Preço"
         android:textAlignment="center"
+        android:fontFamily="sans-serif-black"
+        android:textColor="#000000"
         android:textSize="18sp"
-        android:textStyle="bold"
         app:layout_constraintBottom_toBottomOf="@+id/tv_dados_produto_nome"
         app:layout_constraintStart_toEndOf="@+id/tv_dados_produto_nome"
         app:layout_constraintTop_toTopOf="@+id/tv_dados_produto_nome"
@@ -40,12 +42,12 @@
         android:layout_width="0dp"
         android:layout_height="40dp"
         android:ems="7"
-        android:fontFamily="monospace"
+        android:fontFamily="sans-serif-black"
+        android:textColor="#000000"
+        android:textSize="18sp"
         android:inputType="textPersonName"
         android:text="@string/qtd_ponto"
         android:textAlignment="center"
-        android:textSize="18sp"
-        android:textStyle="bold"
         app:layout_constraintBottom_toBottomOf="@+id/tv_dados_produto_preco"
         app:layout_constraintStart_toEndOf="@+id/tv_dados_produto_preco"
         app:layout_constraintTop_toTopOf="@+id/tv_dados_produto_preco"
