--- a/app/src/main/res/layout/recyclerview_layout_item_conferencia_entrada.xml
+++ b/app/src/main/res/layout/recyclerview_layout_item_conferencia_entrada.xml
@@ -8,5 +8,6 @@
         android:id="@+id/tv_recyclerview_conferencia_entrada"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:fontFamily="sans-serif-black"
         android:textSize="18sp" />
 </LinearLayout>
