--- a/app/src/main/res/layout/activity_alteracao_fornecedor.xml
+++ b/app/src/main/res/layout/activity_alteracao_fornecedor.xml
@@ -4,16 +4,12 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="#80000000"
     tools:context=".activities.AlteracaoFornecedorActivity">
 
     <EditText
         android:id="@+id/et_altera_fornecedor_nome"
-        android:layout_width="0dp"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="8dp"
-        android:layout_marginTop="32dp"
-        android:layout_marginEnd="8dp"
-        android:ems="10"
+        style="@style/AppEtxt"
         android:hint="Nome"
         android:inputType="textPersonName"
         app:layout_constraintEnd_toEndOf="parent"
@@ -22,12 +18,7 @@
 
     <EditText
         android:id="@+id/et_altera_fornecedor_email"
-        android:layout_width="0dp"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="8dp"
-        android:layout_marginTop="8dp"
-        android:layout_marginEnd="8dp"
-        android:ems="10"
+        style="@style/AppEtxt"
         android:hint="@string/email"
         android:inputType="textEmailAddress"
         app:layout_constraintEnd_toEndOf="parent"
@@ -36,12 +27,7 @@
 
     <EditText
         android:id="@+id/et_altera_fornecedor_cnpj"
-        android:layout_width="0dp"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="8dp"
-        android:layout_marginTop="8dp"
-        android:layout_marginEnd="8dp"
-        android:ems="10"
+        style="@style/AppEtxt"
         android:hint="CNPJ"
         android:inputType="number"
         app:layout_constraintEnd_toEndOf="parent"
@@ -50,12 +36,7 @@
 
     <EditText
         android:id="@+id/et_altera_fornecedor_end"
-        android:layout_width="0dp"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="8dp"
-        android:layout_marginTop="8dp"
-        android:layout_marginEnd="8dp"
-        android:ems="10"
+        style="@style/AppEtxt"
         android:hint="@string/endereco"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -63,12 +44,7 @@
 
     <EditText
         android:id="@+id/et_altera_fornecedor_telefone"
-        android:layout_width="0dp"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="8dp"
-        android:layout_marginTop="8dp"
-        android:layout_marginEnd="8dp"
-        android:ems="10"
+        style="@style/AppEtxt"
         android:hint="Telefone"
         android:inputType="phone"
         app:layout_constraintEnd_toEndOf="parent"
@@ -82,6 +58,7 @@
         android:layout_marginStart="8dp"
         android:layout_marginTop="8dp"
         android:layout_marginEnd="8dp"
+        android:background="@drawable/selector_bt"
         android:onClick="alterarFornecedor"
         android:text="Alterar"
         app:layout_constraintEnd_toEndOf="parent"
