--- a/app/src/main/res/layout/activity_cadastro_de_cliente.xml
+++ b/app/src/main/res/layout/activity_cadastro_de_cliente.xml
@@ -4,18 +4,14 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="#80000000"
     tools:context=".activities.CadastroDeClienteActivity">
 
 
     <TextView
         android:id="@+id/tv_cadastro_cliente_nome"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="8dp"
-        android:layout_marginTop="8dp"
-        android:layout_marginBottom="1dp"
+        style="@style/AppTextV"
         android:text="Nome:"
-        android:textSize="18sp"
         app:layout_constraintBottom_toTopOf="@+id/et_cadastro_cliente_nome"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
@@ -24,12 +20,7 @@
 
     <EditText
         android:id="@+id/et_cadastro_cliente_nome"
-        android:layout_width="0dp"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="8dp"
-        android:layout_marginTop="1dp"
-        android:layout_marginEnd="8dp"
-        android:ems="10"
+        style="@style/AppEtxt"
         android:hint="nome"
         android:inputType="textPersonName"
         app:layout_constraintEnd_toEndOf="parent"
@@ -39,25 +30,15 @@
 
     <TextView
         android:id="@+id/tv_cadastro_cliente_email"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="8dp"
-        android:layout_marginTop="8dp"
-        android:layout_marginBottom="1dp"
+        style="@style/AppTextV"
         android:text="Email:"
-        android:textSize="18sp"
         app:layout_constraintBottom_toTopOf="@+id/et_cadastro_cliente_email"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/et_cadastro_cliente_nome" />
 
     <EditText
         android:id="@+id/et_cadastro_cliente_email"
-        android:layout_width="0dp"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="8dp"
-        android:layout_marginTop="1dp"
-        android:layout_marginEnd="8dp"
-        android:ems="10"
+        style="@style/AppEtxt"
         android:hint="@string/email"
         android:inputType="textEmailAddress"
         app:layout_constraintEnd_toEndOf="parent"
@@ -66,25 +47,15 @@
 
     <TextView
         android:id="@+id/tv_cadastro_cliente_cpf"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="8dp"
-        android:layout_marginTop="8dp"
-        android:layout_marginBottom="1dp"
+        style="@style/AppTextV"
         android:text="CPF:"
-        android:textSize="18sp"
         app:layout_constraintBottom_toTopOf="@+id/et_cadastro_cliente_cpf"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/et_cadastro_cliente_email" />
 
     <EditText
         android:id="@+id/et_cadastro_cliente_cpf"
-        android:layout_width="0dp"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="8dp"
-        android:layout_marginTop="1dp"
-        android:layout_marginEnd="8dp"
-        android:ems="10"
+        style="@style/AppEtxt"
         android:hint="@string/cpf"
         android:inputType="number"
         app:layout_constraintEnd_toEndOf="parent"
@@ -94,25 +65,15 @@
 
     <TextView
         android:id="@+id/tv_cadastro_cliente_end"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="8dp"
-        android:layout_marginTop="8dp"
-        android:layout_marginBottom="1dp"
+        style="@style/AppTextV"
         android:text="Endereço:"
-        android:textSize="18sp"
         app:layout_constraintBottom_toTopOf="@+id/et_cadastro_cliente_end"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/et_cadastro_cliente_cpf" />
 
     <EditText
         android:id="@+id/et_cadastro_cliente_end"
-        android:layout_width="0dp"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="8dp"
-        android:layout_marginTop="1dp"
-        android:layout_marginEnd="8dp"
-        android:ems="10"
+        style="@style/AppEtxt"
         android:hint="@string/endereco"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
@@ -121,25 +82,15 @@
 
     <TextView
         android:id="@+id/tv_cadastro_cliente_telefone"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="8dp"
-        android:layout_marginTop="8dp"
-        android:layout_marginBottom="1dp"
+        style="@style/AppTextV"
         android:text="Telefone:"
-        android:textSize="18sp"
         app:layout_constraintBottom_toTopOf="@+id/et_cadastro_cliente_telefone"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/et_cadastro_cliente_end" />
 
     <EditText
         android:id="@+id/et_cadastro_cliente_telefone"
-        android:layout_width="0dp"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="8dp"
-        android:layout_marginTop="1dp"
-        android:layout_marginEnd="8dp"
-        android:ems="10"
+        style="@style/AppEtxt"
         android:hint="@string/telefone"
         android:inputType="phone"
         app:layout_constraintEnd_toEndOf="parent"
@@ -154,6 +105,7 @@
         android:layout_marginStart="8dp"
         android:layout_marginTop="20dp"
         android:layout_marginEnd="8dp"
+        android:background="@drawable/selector_bt"
         android:onClick="cadastrarCliente"
         android:text="Salvar"
         app:layout_constraintEnd_toEndOf="parent"
