--- a/app/src/main/res/layout/activity_cadastro_de_fornecedor.xml
+++ b/app/src/main/res/layout/activity_cadastro_de_fornecedor.xml
@@ -4,17 +4,13 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="#80000000"
     tools:context=".activities.CadastroDeFornecedorActivity">
 
     <TextView
         android:id="@+id/tv_cadastro_fornecedor_nome"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="8dp"
-        android:layout_marginTop="1dp"
-        android:layout_marginBottom="1dp"
+        style="@style/AppTextV"
         android:text="Nome:"
-        android:textSize="18sp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
@@ -23,12 +19,7 @@
 
     <EditText
         android:id="@+id/et_cadastro_fornecedor_nome"
-        android:layout_width="0dp"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="8dp"
-        android:layout_marginTop="1dp"
-        android:layout_marginEnd="8dp"
-        android:ems="10"
+        style="@style/AppEtxt"
         android:hint="nome"
         android:inputType="textPersonName"
         app:layout_constraintEnd_toEndOf="parent"
@@ -38,23 +29,14 @@
 
     <TextView
         android:id="@+id/tv_cadastro_fornecedor_email"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="8dp"
-        android:layout_marginTop="8dp"
+        style="@style/AppTextV"
         android:text="Email:"
-        android:textSize="18sp"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/et_cadastro_fornecedor_nome" />
 
     <EditText
         android:id="@+id/et_cadastro_fornecedor_email"
-        android:layout_width="0dp"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="8dp"
-        android:layout_marginTop="1dp"
-        android:layout_marginEnd="8dp"
-        android:ems="10"
+        style="@style/AppEtxt"
         android:hint="@string/email"
         android:inputType="textEmailAddress"
         app:layout_constraintEnd_toEndOf="parent"
@@ -65,23 +47,14 @@
 
     <TextView
         android:id="@+id/tv_cadastro_fornecedor_cnpj"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="8dp"
-        android:layout_marginTop="8dp"
+        style="@style/AppTextV"
         android:text="CNPJ:"
-        android:textSize="18sp"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/et_cadastro_fornecedor_email" />
 
     <EditText
         android:id="@+id/et_cadastro_fornecedor_cnpj"
-        android:layout_width="0dp"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="8dp"
-        android:layout_marginTop="1dp"
-        android:layout_marginEnd="8dp"
-        android:ems="10"
+        style="@style/AppEtxt"
         android:hint="@string/cnpj"
         android:inputType="number"
         app:layout_constraintEnd_toEndOf="parent"
@@ -91,23 +64,14 @@
 
     <TextView
         android:id="@+id/tv_cadastro_fornecedor_end"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="8dp"
-        android:layout_marginTop="8dp"
+        style="@style/AppTextV"
         android:text="Endereço:"
-        android:textSize="18sp"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/et_cadastro_fornecedor_cnpj" />
 
     <EditText
         android:id="@+id/et_cadastro_fornecedor_end"
-        android:layout_width="0dp"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="8dp"
-        android:layout_marginTop="1dp"
-        android:layout_marginEnd="8dp"
-        android:ems="10"
+        style="@style/AppEtxt"
         android:hint="@string/endereco"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -115,24 +79,15 @@
 
     <TextView
         android:id="@+id/tv_cadastro_fornecedor_telefone"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="8dp"
-        android:layout_marginTop="8dp"
+        style="@style/AppTextV"
         android:text="Telefone:"
-        android:textSize="18sp"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/et_cadastro_fornecedor_end" />
 
 
     <EditText
         android:id="@+id/et_cadastro_fornecedor_telefone"
-        android:layout_width="0dp"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="8dp"
-        android:layout_marginTop="1dp"
-        android:layout_marginEnd="8dp"
-        android:ems="10"
+        style="@style/AppEtxt"
         android:hint="@string/telefone"
         android:inputType="phone"
         app:layout_constraintEnd_toEndOf="parent"
@@ -145,6 +100,7 @@
         android:layout_marginStart="8dp"
         android:layout_marginTop="20dp"
         android:layout_marginEnd="8dp"
+        android:background="@drawable/selector_bt"
         android:onClick="cadastrarFornecedor"
         android:text="Salvar"
         app:layout_constraintEnd_toEndOf="parent"
