--- a/app/src/main/res/layout/activity_confere_saida.xml
+++ b/app/src/main/res/layout/activity_confere_saida.xml
@@ -4,16 +4,12 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="#80000000"
     tools:context=".activities.ConfereSaidaActivity">
 
     <TextView
         android:id="@+id/tv_confere_saida_idvenda"
-        android:layout_width="0dp"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="8dp"
-        android:layout_marginTop="150dp"
-        android:layout_marginEnd="8dp"
-        android:textSize="22sp"
+        style="@style/AppEtxt"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
@@ -56,11 +52,7 @@
 
     <EditText
         android:id="@+id/et_confere_saida_qtd"
-        android:layout_width="0dp"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="8dp"
-        android:layout_marginTop="16dp"
-        android:layout_marginEnd="8dp"
+        style="@style/AppEtxt"
         android:hint="@string/Quantidade"
         android:inputType="numberDecimal"
         android:textSize="22sp"
@@ -75,6 +67,7 @@
         android:layout_marginStart="8dp"
         android:layout_marginTop="24dp"
         android:layout_marginEnd="8dp"
+        android:background="@drawable/selector_bt"
         android:onClick="conferirVenda"
         android:text="Conferir"
         app:layout_constraintEnd_toEndOf="parent"
