--- a/app/src/main/res/layout/activity_lista_clientes.xml
+++ b/app/src/main/res/layout/activity_lista_clientes.xml
@@ -4,6 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="#80000000"
     tools:context=".activities.ClientesActivity">
 
     <TextView
@@ -13,12 +14,12 @@
         android:layout_marginStart="8dp"
         android:layout_marginTop="8dp"
         android:ems="9"
-        android:fontFamily="monospace"
+        android:textAlignment="center"
+        android:fontFamily="sans-serif-black"
+        android:textColor="#000000"
+        android:textSize="18sp"
         android:inputType="textPersonName"
         android:text="Nome"
-        android:textAlignment="center"
-        android:textSize="18sp"
-        android:textStyle="bold"
         app:layout_constraintBottom_toTopOf="@+id/rv_todos_clientes"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
@@ -29,10 +30,11 @@
         android:layout_height="40dp"
         android:layout_marginEnd="8dp"
         android:ems="9"
-        android:text="Telefone"
         android:textAlignment="center"
+        android:fontFamily="sans-serif-black"
+        android:textColor="#000000"
         android:textSize="18sp"
-        android:textStyle="bold"
+        android:text="Telefone"
         app:layout_constraintBottom_toBottomOf="@+id/tv_dados_cliente_nome"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toTopOf="@+id/tv_dados_cliente_nome" />
