--- a/app/src/main/res/layout/activity_lista_usuarios.xml
+++ b/app/src/main/res/layout/activity_lista_usuarios.xml
@@ -4,6 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="#80000000"
     tools:context=".activities.ListaUsuariosActivity">
 
     <androidx.recyclerview.widget.RecyclerView
