--- a/app/src/main/res/layout/recyclerview_layout_item_todos_fornecedores.xml
+++ b/app/src/main/res/layout/recyclerview_layout_item_todos_fornecedores.xml
@@ -8,6 +8,7 @@
         android:layout_width="200dp"
         android:layout_height="match_parent"
         android:paddingLeft="10dp"
+        android:fontFamily="sans-serif-black"
         android:textSize="18sp" />
 
 
@@ -15,6 +16,7 @@
         android:id="@+id/tv_recyclerview_telefone_fornecedor"
         android:layout_width="200dp"
         android:layout_height="match_parent"
+        android:fontFamily="sans-serif-black"
         android:textSize="18sp" />
 
 </LinearLayout>
