--- a/app/src/main/res/layout/recyclerview_layout_item_todos_itenscompra.xml
+++ b/app/src/main/res/layout/recyclerview_layout_item_todos_itenscompra.xml
@@ -9,6 +9,7 @@
         android:layout_height="wrap_content"
         android:background="#00DBD5D5"
         android:paddingLeft="10dp"
+        android:fontFamily="sans-serif-black"
         android:textSize="18sp" />
 
     <TextView
@@ -17,6 +18,7 @@
         android:layout_height="match_parent"
         android:background="#00F7F2F2"
         android:textAlignment="center"
+        android:fontFamily="sans-serif-black"
         android:textSize="18sp" />
 
     <TextView
@@ -25,6 +27,7 @@
         android:layout_height="match_parent"
         android:background="#00DBD5D5"
         android:textAlignment="center"
+        android:fontFamily="sans-serif-black"
         android:textSize="18sp"
         />
 
