--- a/app/src/main/res/layout/spinner_item.xml
+++ b/app/src/main/res/layout/spinner_item.xml
@@ -2,10 +2,5 @@
 <TextView xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    style="?android:attr/spinnerItemStyle"
-    android:singleLine="true"
-    android:ellipsize="marquee"
-    android:textSize="20sp"
-    android:textColor="#000000"
-    android:background="#d3d3d3">
+    style="@style/AppEtxt">
 </TextView>
