--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -1,20 +1,66 @@
-<resources>
+<resources xmlns:android="http://schemas.android.com/apk/res/android">
 
-    <!-- Base application theme. -->
-    <style name="AppTheme" parent="Theme.AppCompat.Light.DarkActionBar">
-        <!-- Customize your theme here. -->
+
+    <style name= "AppTheme" parent = "Theme.AppCompat.Light.DarkActionBar" >
         <item name="colorPrimary">@color/colorPrimary</item>
         <item name="colorPrimaryDark">@color/colorPrimaryDark</item>
         <item name="colorAccent">@color/colorAccent</item>
-    </style>
 
+    </style >
     <style name="AppTheme.NoActionBar">
         <item name="windowActionBar">false</item>
         <item name="windowNoTitle">true</item>
     </style>
-
     <style name="AppTheme.AppBarOverlay" parent="ThemeOverlay.AppCompat.Dark.ActionBar" />
 
     <style name="AppTheme.PopupOverlay" parent="ThemeOverlay.AppCompat.Light" />
 
+    <style name = "CustomActionBarTheme" parent = "@style/Theme.AppCompat.Light.DarkActionBar">
+        <item name= "android:actionBarStyle" > @style/MyActionBar</item >
+        <item name  = "android:actionBarTabTextStyle" > @style/MyActionBarTabText </item >
+        <item name  = "android:actionMenuTextColor" > @color/preto </item >
+
+        <item name  = "actionBarStyle" > @style/MyActionBar </item >
+        <item name  = "actionBarTabTextStyle" > @style/MyActionBarTabText </item >
+        <item name  = "actionMenuTextColor" > @color/preto</item >
+    </style >
+
+    <style name  = "MyActionBar" parent = "@style/Widget.AppCompat.Light.ActionBar.Solid.Inverse"  >
+        <item  name  = "android:background" >@drawable/gradient</item >
+        <item  name = "android:titleTextStyle" > @style/MyActionBarTitleText </item >
+
+        <item  name  = "background" >@drawable/gradient</item>
+        <item  name  = "titleTextStyle" > @style/MyActionBarTitleText </item >
+    </style >
+
+    <style name = "MyActionBarTitleText" parent = "@style/TextAppearance.AppCompat.Widget.ActionBar.Title" >
+        <item name = "android:textColor" > @color/preto </item >
+    </style >
+
+    <style name  = "MyActionBarTabText" parent = "@style/Widget.AppCompat.ActionBar.TabText" >
+        <item name = "android:textColor" > @color/preto </item >
+    </style >
+
+    <style name="AppEtxt">
+        <item name="android:layout_width">match_parent</item>
+        <item name="android:layout_height">wrap_content</item>
+        <item name="android:background">@drawable/selector_et</item>
+        <item name="android:layout_marginStart">8dp</item>
+        <item name="android:layout_marginEnd">8dp</item>
+        <item name="android:layout_marginTop">1dp</item>
+    </style>
+
+    <style name="AppTextV">
+        <item name="android:layout_width">wrap_content</item>
+        <item name="android:layout_height">wrap_content</item>
+        <item name="android:layout_marginStart">8dp</item>
+        <item name="android:layout_marginBottom">1dp</item>
+        <item name="android:fontFamily">sans-serif-black</item>
+        <item name="android:textColor">#000000</item>
+        <item name="android:textSize">18sp</item>
+    </style>
+
+
 </resources>
+
+
