--- a/app/src/main/res/layout/recyclerview_layout_item_todos_itensvenda.xml
+++ b/app/src/main/res/layout/recyclerview_layout_item_todos_itensvenda.xml
@@ -2,25 +2,25 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content">
+    android:layout_height="wrap_content"
+    android:layout_marginTop="5dp">
 
     <TextView
         android:id="@+id/tv_recyclerview_itemvenda_produto"
         android:layout_width="115dp"
         android:layout_height="wrap_content"
         android:background="#00DBD5D5"
-        android:paddingLeft="10dp"
         android:fontFamily="sans-serif-black"
-        android:textSize="18sp"
-        />
+        android:paddingLeft="10dp"
+        android:textSize="18sp" />
 
     <TextView
         android:id="@+id/tv_recyclerview_itemvenda_qtd"
         android:layout_width="105dp"
         android:layout_height="match_parent"
         android:background="#00F7F2F2"
-        android:textAlignment="center"
         android:fontFamily="sans-serif-black"
+        android:textAlignment="center"
         android:textSize="18sp" />
 
     <TextView
@@ -28,10 +28,9 @@
         android:layout_width="120dp"
         android:layout_height="match_parent"
         android:background="#00DBD5D5"
-        android:textAlignment="center"
         android:fontFamily="sans-serif-black"
-        android:textSize="18sp"
-        />
+        android:textAlignment="center"
+        android:textSize="18sp" />
 
 
 </LinearLayout>
