--- a/app/src/main/res/layout/activity_cadastro_pedido_de_compra.xml
+++ b/app/src/main/res/layout/activity_cadastro_pedido_de_compra.xml
@@ -4,10 +4,26 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="#80000000"
+    android:background="@drawable/gradient2"
     tools:context="com.example.frontpi4.activities.CadastroPedidoDeCompraActivity">
 
+    <ProgressBar
+        android:id="@+id/pb_cadastro_pedido_compra_carregando"
+        style="?android:attr/progressBarStyle"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:indeterminate="false"
+        android:progressTint="#F50202"
+        android:translationZ="2dp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="@+id/scrollView3"
+        app:layout_constraintTop_toTopOf="@+id/scrollView3"
+        tools:ignore="MissingConstraints"
+        tools:visibility="invisible" />
+
     <ScrollView
+        android:id="@+id/scrollView3"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         tools:layout_editor_absoluteX="143dp"
@@ -51,10 +67,11 @@
 
             <Button
                 android:id="@+id/bt_cadastro_pedido_compra_limpa_lista_itens"
-                android:layout_width="wrap_content"
+                android:layout_width="170dp"
                 android:layout_height="wrap_content"
                 android:layout_marginStart="8dp"
                 android:layout_marginTop="8dp"
+                android:layout_marginEnd="2dp"
                 android:background="@drawable/selector_bt"
                 android:onClick="limpaListaDeItensDeCompra"
                 android:text="Limpa Lista de itens"
@@ -63,16 +80,18 @@
 
             <Button
                 android:id="@+id/bt_cadastro_pedido_compra_cancelar"
-                android:layout_width="wrap_content"
+                android:layout_width="170dp"
                 android:layout_height="wrap_content"
-                android:layout_marginTop="8dp"
                 android:layout_marginEnd="8dp"
                 android:background="@drawable/selector_bt"
                 android:onClick="cancelaPedidoDeCompra"
                 android:text="Cancelar"
+                app:layout_constraintBottom_toBottomOf="@+id/bt_cadastro_pedido_compra_limpa_lista_itens"
                 app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintHorizontal_bias="1.0"
                 app:layout_constraintStart_toEndOf="@+id/bt_cadastro_pedido_compra_limpa_lista_itens"
-                app:layout_constraintTop_toBottomOf="@+id/bt_cadastro_pedido_compra_lancar_pedido" />
+                app:layout_constraintTop_toTopOf="@+id/bt_cadastro_pedido_compra_limpa_lista_itens"
+                app:layout_constraintVertical_bias="0.0" />
 
             <EditText
                 android:id="@+id/et_cadastro_pedido_compra_quantidade"
@@ -95,23 +114,6 @@
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toBottomOf="@+id/et_cadastro_pedido_compra_quantidade" />
-
-            <ProgressBar
-                android:id="@+id/pb_cadastro_pedido_compra_carregando"
-                style="?android:attr/progressBarStyle"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:indeterminate="false"
-                android:progressTint="#F50202"
-                android:translationZ="2dp"
-                app:layout_constraintBottom_toBottomOf="parent"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintHorizontal_bias="0.473"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toTopOf="parent"
-                app:layout_constraintVertical_bias="0.471"
-                tools:ignore="MissingConstraints"
-                tools:visibility="invisible" />
 
             <ScrollView
                 android:layout_width="match_parent"
@@ -192,6 +194,7 @@
 
             <androidx.recyclerview.widget.RecyclerView
                 android:id="@+id/rv_todos_itenscompra"
+                style="@style/AppSp"
                 android:layout_width="0dp"
                 android:layout_height="110dp"
                 android:layout_marginStart="8dp"
