--- a/app/src/main/res/layout/activity_cadastro_pedido_de_venda.xml
+++ b/app/src/main/res/layout/activity_cadastro_pedido_de_venda.xml
@@ -4,10 +4,27 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="#80000000"
+    android:background="@drawable/gradient2"
     tools:context=".activities.CadastroPedidoDeVendaActivity">
 
+    <ProgressBar
+        android:id="@+id/pb_cadastro_pedido_venda_carregando"
+        style="?android:attr/progressBarStyle"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:elevation="@dimen/fab_margin"
+        android:indeterminate="false"
+        android:progressTint="#F50202"
+        android:translationZ="2dp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="@+id/scrollView2"
+        app:layout_constraintStart_toStartOf="@+id/scrollView2"
+        app:layout_constraintTop_toTopOf="@+id/scrollView2"
+        tools:ignore="MissingConstraints"
+        tools:visibility="invisible" />
+
     <ScrollView
+        android:id="@+id/scrollView2"
         android:layout_width="match_parent"
         android:layout_height="match_parent">
 
@@ -47,28 +64,31 @@
 
             <Button
                 android:id="@+id/bt_cadastro_pedido_venda_limpa_lista_itens"
-                android:layout_width="wrap_content"
+                android:layout_width="170dp"
                 android:layout_height="wrap_content"
                 android:layout_marginStart="8dp"
                 android:layout_marginTop="8dp"
+                android:layout_marginEnd="2dp"
                 android:background="@drawable/selector_bt"
                 android:onClick="limpaListaDeItensDeVenda"
                 android:text="Limpa Lista de itens"
+                android:textAlignment="center"
+                app:layout_constraintEnd_toStartOf="@+id/bt_cadastro_pedido_venda_cancelar"
+                app:layout_constraintHorizontal_bias="0.0"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toBottomOf="@+id/bt_cadastro_pedido_venda_lancar_pedido" />
 
             <Button
                 android:id="@+id/bt_cadastro_pedido_venda_cancelar"
-                android:layout_width="wrap_content"
+                android:layout_width="170dp"
                 android:layout_height="wrap_content"
-                android:layout_marginTop="8dp"
                 android:layout_marginEnd="8dp"
                 android:background="@drawable/selector_bt"
                 android:onClick="cancelaPedidoDeVenda"
                 android:text="Cancelar"
+                app:layout_constraintBottom_toBottomOf="@+id/bt_cadastro_pedido_venda_limpa_lista_itens"
                 app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintStart_toEndOf="@+id/bt_cadastro_pedido_venda_limpa_lista_itens"
-                app:layout_constraintTop_toBottomOf="@+id/bt_cadastro_pedido_venda_lancar_pedido" />
+                app:layout_constraintTop_toTopOf="@+id/bt_cadastro_pedido_venda_limpa_lista_itens" />
 
             <EditText
                 android:id="@+id/et_cadastro_pedido_venda_quantidade"
@@ -90,23 +110,6 @@
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toBottomOf="@+id/tv_cadastro_pedido_venda_valor_produto" />
-
-            <ProgressBar
-                android:id="@+id/pb_cadastro_pedido_venda_carregando"
-                style="?android:attr/progressBarStyle"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:indeterminate="false"
-                android:progressTint="#F50202"
-                android:translationZ="2dp"
-                app:layout_constraintBottom_toBottomOf="parent"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintHorizontal_bias="0.476"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toTopOf="parent"
-                app:layout_constraintVertical_bias="0.468"
-                tools:ignore="MissingConstraints"
-                tools:visibility="invisible" />
 
             <ScrollView
                 android:layout_width="match_parent"
@@ -146,8 +149,7 @@
                 android:text="@string/cliente_dois_pontos"
                 app:layout_constraintBottom_toTopOf="@+id/spin_cadastro_pedido_venda_cliente"
                 app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toTopOf="parent"
-                 />
+                app:layout_constraintTop_toTopOf="parent" />
 
             <TextView
                 android:id="@+id/tv_cadastro_pedido_venda_produto"
@@ -204,6 +206,7 @@
 
             <androidx.recyclerview.widget.RecyclerView
                 android:id="@+id/rv_todos_itensVenda"
+                style="@style/AppSp"
                 android:layout_width="0dp"
                 android:layout_height="110dp"
                 android:layout_marginStart="8dp"
