--- a/app/src/main/res/layout/activity_lista_clientes.xml
+++ b/app/src/main/res/layout/activity_lista_clientes.xml
@@ -4,66 +4,21 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="#80000000"
+    android:background="@drawable/gradient2"
     tools:context=".activities.ClientesActivity">
-
-    <TextView
-        android:id="@+id/tv_dados_cliente_nome"
-        android:layout_width="0dp"
-        android:layout_height="40dp"
-        android:layout_marginStart="8dp"
-        android:layout_marginTop="8dp"
-        android:ems="9"
-        android:textAlignment="center"
-        android:fontFamily="sans-serif-black"
-        android:textColor="#000000"
-        android:textSize="18sp"
-        android:inputType="textPersonName"
-        android:text="Nome"
-        app:layout_constraintBottom_toTopOf="@+id/rv_todos_clientes"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
-
-    <TextView
-        android:id="@+id/tv_dados_cliente_telefone"
-        android:layout_width="0dp"
-        android:layout_height="40dp"
-        android:layout_marginEnd="8dp"
-        android:ems="9"
-        android:textAlignment="center"
-        android:fontFamily="sans-serif-black"
-        android:textColor="#000000"
-        android:textSize="18sp"
-        android:text="Telefone"
-        app:layout_constraintBottom_toBottomOf="@+id/tv_dados_cliente_nome"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toTopOf="@+id/tv_dados_cliente_nome" />
-
-    <androidx.recyclerview.widget.RecyclerView
-        android:id="@+id/rv_todos_clientes"
-        android:layout_width="0dp"
-        android:layout_height="522dp"
-        android:layout_marginStart="8dp"
-        android:layout_marginEnd="8dp"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.0"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/tv_dados_cliente_nome" />
 
     <com.google.android.material.floatingactionbutton.FloatingActionButton
         android:id="@+id/fab"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginEnd="8dp"
         android:layout_marginBottom="8dp"
         android:clickable="true"
-        app:layout_constraintBottom_toBottomOf="@+id/rv_todos_clientes"
-        app:layout_constraintEnd_toEndOf="@+id/rv_todos_clientes"
-        app:layout_constraintHorizontal_bias="1.0"
-        app:layout_constraintStart_toStartOf="@+id/rv_todos_clientes"
-        app:layout_constraintTop_toTopOf="@+id/rv_todos_clientes"
-        app:layout_constraintVertical_bias="1.0"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.512"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.929"
         app:srcCompat="@android:drawable/ic_input_add" />
 
     <ProgressBar
@@ -81,6 +36,50 @@
         tools:ignore="MissingConstraints"
         tools:visibility="invisible" />
 
+    <TextView
+        android:id="@+id/tv_dados_cliente_telefone"
+        android:layout_width="0dp"
+        android:layout_height="40dp"
+        android:layout_marginEnd="8dp"
+        android:ems="9"
+        android:fontFamily="sans-serif-black"
+        android:text="Telefone"
+        android:textAlignment="center"
+        android:textColor="#000000"
+        android:textSize="18sp"
+        app:layout_constraintBottom_toBottomOf="@+id/tv_dados_cliente_nome"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toTopOf="@+id/tv_dados_cliente_nome" />
+
+    <TextView
+        android:id="@+id/tv_dados_cliente_nome"
+        android:layout_width="0dp"
+        android:layout_height="40dp"
+        android:layout_marginStart="8dp"
+        android:layout_marginTop="8dp"
+        android:ems="9"
+        android:fontFamily="sans-serif-black"
+        android:inputType="textPersonName"
+        android:text="Nome"
+        android:textAlignment="center"
+        android:textColor="#000000"
+        android:textSize="18sp"
+        app:layout_constraintBottom_toTopOf="@+id/rv_todos_clientes"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
+
+    <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/rv_todos_clientes"
+        android:layout_width="0dp"
+        android:layout_height="522dp"
+        android:layout_marginStart="8dp"
+        android:layout_marginTop="20dp"
+        android:layout_marginEnd="8dp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.0"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/tv_dados_cliente_nome" />
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
