--- a/app/src/main/res/layout/recyclerview_layout_item_conferencia_entrada.xml
+++ b/app/src/main/res/layout/recyclerview_layout_item_conferencia_entrada.xml
@@ -9,5 +9,6 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:fontFamily="sans-serif-black"
+        style="@style/AppSp"
         android:textSize="18sp" />
 </LinearLayout>
