--- a/app/src/main/res/layout/recyclerview_layout_item_todos_clientes.xml
+++ b/app/src/main/res/layout/recyclerview_layout_item_todos_clientes.xml
@@ -16,6 +16,7 @@
         android:layout_width="200dp"
         android:layout_height="match_parent"
         android:fontFamily="sans-serif-black"
-        android:textSize="18sp" />
+        android:textSize="18sp"
+         />
 
 </LinearLayout>
