--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -26,10 +26,10 @@
     </style >
 
     <style name  = "MyActionBar" parent = "@style/Widget.AppCompat.Light.ActionBar.Solid.Inverse"  >
-        <item  name  = "android:background" >@drawable/gradient</item >
+        <item  name  = "android:background" >@color/padrao</item >
         <item  name = "android:titleTextStyle" > @style/MyActionBarTitleText </item >
 
-        <item  name  = "background" >@drawable/gradient</item>
+        <item  name  = "background" >@color/padrao</item>
         <item  name  = "titleTextStyle" > @style/MyActionBarTitleText </item >
     </style >
 
@@ -48,6 +48,8 @@
         <item name="android:layout_marginStart">8dp</item>
         <item name="android:layout_marginEnd">8dp</item>
         <item name="android:layout_marginTop">1dp</item>
+        <item name="android:textSize">22dp</item>
+        <item name="android:elevation">30dp</item>
     </style>
 
     <style name="AppTextV">
@@ -58,6 +60,16 @@
         <item name="android:fontFamily">sans-serif-black</item>
         <item name="android:textColor">#000000</item>
         <item name="android:textSize">18sp</item>
+    </style>
+
+    <style name="AppSp">
+        <item name="android:layout_width">match_parent</item>
+        <item name="android:layout_height">wrap_content</item>
+        <item name="android:layout_marginStart">8dp</item>
+        <item name="android:layout_marginEnd">8dp</item>
+        <item name="android:layout_marginTop">1dp</item>
+        <item name="android:textSize">22dp</item>
+        <item name="android:background">@drawable/selector_sp</item>
     </style>
 
 
